--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
+    <main id="main" class="product-listing-wrapper">
+
     </main>
 
+
+
     <script src="api/products.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
