--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
   </head>
 
   <body>
@@ -9,5 +11,6 @@
     </main>
 
     <script src="api/products.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
