--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<head>
+    <link rel="stylesheet" href="css.css" />
 
-    <script src="api/products.js"></script>
-  </body>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Тестовое задание</title>
+</head>
+
+<body style="align-items: center;">
+  <div id="mainframe">
+  
+</div>
+    <!-- Наше модальное всплывающее окно быстрого заказа -->
+    <div style="text-align: center" id="QuickOrder_popup" class="QuickOrder_popup">
+
+    </div>
+
+
+     <div style="text-align: left" id="CartPopup" class="CartPopup">
+      <div class="Cart_header">
+  Вы добавили в корзину:
+</div>
+    </div>
+
+
+</body>
+<script src="js.js" type="text/javascript"></script>
+
 </html>
