--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<html lang="ru">
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<head>
+  <title>Test Task</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="styles/products/common.css">
+  <link rel="stylesheet" href="styles/products/product-item.css">
+  <link rel="stylesheet" href="styles/products/modal-buy.css">
+  <link rel="stylesheet" href="styles/products/modal-cart.css">
+</head>
 
-    <script src="api/products.js"></script>
-  </body>
+<body>
+
+  <main class="product-listing-wrapper">
+  </main>
+
+  <script src="api/products/products-list.js"></script>
+  <script src="api/products/template.js"></script>
+  <script src="api/products/modal.js"></script>
+  <script src="api/products/main.js"></script>
+</body>
+
 </html>
