Добавляет выполненное тестовое задание

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<html lang="ru">
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Title</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <script src="api/products.js"></script>
-  </body>
+<body>
+  <main>
+    <section class="container products">
+      <h1 class="visually-hidden">Список товаров</h1>
+      <ul class="products-list">
+      </ul>
+    </section>
+  </main>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
