Anton Zinchenko rework 0.0.1

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/styleReset.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/style-shopping-cart.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/style-order-list.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap&subset=latin-ext" rel="stylesheet">
 </head>
+
 <body>
   <!-- Cart -->
   <div class="page">
@@ -48,4 +52,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
