--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>Тестовое задание</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/popup.css">
+    <link rel="stylesheet" href="./css/products-list.css">
+    <link rel="icon" href="./assets/icons/favicon.ico">
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
-    </main>
-
+    <main id="main">
+    </main>    
     <script src="api/products.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/popup_cart.js"></script>
+    <script src="js/modal_order.js"></script>
+    <script src="js/products-list.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
