--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Test work</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -34,5 +35,7 @@
   <section class="product-listing-wrapper"></section>
 
 </main>
+<script src="api/products.js"></script>
+<script defer src="js/index.js"></script>
 </body>
 </html>
